--- a/example/resources/main.css
+++ b/example/resources/main.css
@@ -10,6 +10,8 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  background-color: #000;
+  color: #fff;
 }
 
 a, a:hover, a:visited, a:active {
@@ -30,7 +32,7 @@ a, a:hover, a:visited, a:active {
   padding: 8px;
   gap: 8px;
 
-  background-color: #ffffff;
+  background-color: #000;
 }
 #options_div * {
   margin: 0px;
@@ -41,6 +43,47 @@ a, a:hover, a:visited, a:active {
   height: 120px;
   resize: none;
   margin-top: -4px;
+}
+
+#tabs-container {
+  display: flex;
+  align-items: center;
+  background-color: #000;
+  padding: 10px;
+}
+
+#tabs {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 5px;
+}
+
+.tab {
+  padding: 10px 20px;
+  cursor: pointer;
+  white-space: nowrap;
+  background-color: #000;
+  border-radius: 30px;
+  margin-right: 5px;
+  user-select: none;
+}
+
+.tab:hover {
+  border: 1px solid #fff;
+}
+
+.tab.active {
+  background-color: #222222;
+}
+
+.tab .favicon {
+  width: 16px;
+  height: 16px;
+}
+
+.tab .title {
+  color: #fff;
 }
 
 #address_bar {
@@ -68,6 +111,11 @@ a, a:hover, a:visited, a:active {
   width: 100%;
   height: 100%;
   border-width: 0px;
+  display: none;
+}
+
+#frame_container iframe.active {
+  display: block;
 }
 
 #favicon_container {
